# See links below for documentaion notes.
#
# https://packaging.python.org/guides/distributing-packages-using-setuptools/
# https://setuptools.readthedocs.io/en/latest/setuptools.html

[metadata]
name = certbot-dns-yandex
url = https://github.com/daskol/certbot-dns-yandex
description = Yandex DNS manager (aka PDD) authenticator plugin for Certbot
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Linux
project_urls =
    Issues = https://github.com/daskol/certbot-dns-yandex
    Repository = https://github.com/daskol/certbot-dns-yandex
    Wiki = https://github.com/daskol/certbot-dns-yandex
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: System Administrators
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Security
    Topic :: System :: Installation/Setup
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.9,<4
install_requires =
    acme>=1.10.0
    certbot>=1.10.0
    zope.interface

[options.entry_points]
certbot.plugins =
    dns-yandex = certbot_dns_yandex.plugin:Authenticator
console_scripts =
    yandex-dns = certbot_dns_yandex.cli:main

[options.packages.find]
where=.
